--- a/src/Components/Game/Game.module.css
+++ b/src/Components/Game/Game.module.css
@@ -1,11 +1,13 @@
 .container {
     display: grid;
+    width: 80%;
     grid-template-rows: repeat(2,4fr);
     grid-template-columns: repeat(2,4fr);
     align-self:center;
 }
 
 .colors {
-    width:494px;
-    height:494px;
+    width:300px;
+    height:300px;
+    background-size: cover;
 }
