--- a/src/Components/Game/Game.module.css
+++ b/src/Components/Game/Game.module.css
@@ -1,13 +1,37 @@
+.outer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .container {
     display: grid;
-    width: 80%;
-    grid-template-rows: repeat(2,4fr);
-    grid-template-columns: repeat(2,4fr);
-    align-self:center;
+    grid-template-rows: repeat(2,300px);
+    grid-template-columns: repeat(2,300px);
 }
+
 
 .colors {
     width:300px;
     height:300px;
     background-size: cover;
 }
+
+
+@media (max-width: 1024px) {
+    .container {
+        grid-template-rows: repeat(2,150px);
+        grid-template-columns: repeat(2,150px);
+    }
+
+    .colors {
+        width:150px;
+        height:150px;
+        background-size: cover;
+    } 
+}
+
+
