--- a/src/Components/Game/Game.module.css
+++ b/src/Components/Game/Game.module.css
@@ -1,37 +1,51 @@
 .outer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
-    display: grid;
-    grid-template-rows: repeat(2,300px);
-    grid-template-columns: repeat(2,300px);
+  display: grid;
+  grid-template-rows: repeat(2, 300px);
+  grid-template-columns: repeat(2, 300px);
 }
 
+.score {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 25px;
+  position: fixed;
+  bottom: 0;
+  padding: 5px;
+  background-color: #d9d9d8;
+}
+
+.score span {
+  font-family: "pixelfont";
+  padding-left: 10px;
+  color: #456cb4;
+}
 
 .colors {
-    width:300px;
-    height:300px;
-    background-size: cover;
+  width: 300px;
+  height: 300px;
+  background-size: cover;
 }
-
 
 @media (max-width: 1024px) {
-    .container {
-        grid-template-rows: repeat(2,150px);
-        grid-template-columns: repeat(2,150px);
-    }
+  .container {
+    grid-template-rows: repeat(2, 150px);
+    grid-template-columns: repeat(2, 150px);
+  }
 
-    .colors {
-        width:150px;
-        height:150px;
-        background-size: cover;
-    } 
+  .colors {
+    width: 150px;
+    height: 150px;
+    background-size: cover;
+  }
 }
-
-
