--- a/src/Components/LeaderBoard/LeaderBoard.module.css
+++ b/src/Components/LeaderBoard/LeaderBoard.module.css
@@ -10,10 +10,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 10px;
     padding: 30px;
 }
+
 
 .container span {
     font-family: "pixelfont";
