--- a/src/Components/Intro/Intro.module.css
+++ b/src/Components/Intro/Intro.module.css
@@ -20,12 +20,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 15px;
   width: 100%;
 }
 
 .links {
   text-decoration: none;
-  margin-bottom: 20px;
 }
 
 .menu span {
